# glfw

./: CMakeLists.txt  README.md
include/: actor.hpp  map.hpp  scene.hpp  shader.hpp  volumeMap.hpp  window.hpp
shaders/: mapFragShader.glsl  mapVertShader.glsl  outlineFragShader.glsl  outlineVertShader.glsl
src/: main.cpp
